# nix-scribe

./: .envrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  flake.nix  pyproject.toml  scan_build_run_vm.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  module_request.yml
.github/workflows/: lint.yml  test.yml
nix/: package.nix  python.nix  shell.nix
nix_scribe/: main.py
nix_scribe/lib/: nixfile.py
nix_scribe/modules/: base.py
src/: arguments.py  main.py  nix-scribe.py  nixscribe.py
src/lib/: context.py  nix_writer.py  nixfile.py  option_block.py
src/modules/: base.py
src/modules/security/: sudo.py
src/nix_scribe/: arguments.py  logger.py  main.py  nixscribe.py
src/nix_scribe/lib/: asset.py  context.py  loader.py  modularization.py  nix_types.py  nix_writer.py  nixfile.py  option_block.py  registry.py  systemctl.py
src/writer/: nixfile.py  option_block.py  syntax_builder.py  value.py
tests/: test_context_systemctl.py
tests/lib/: test_dots_in_ini.py
tests/modules/: test_git.py  test_groups.py  test_grub.py  test_nano.py  test_networking.py  test_networkmanager.py  test_rtkit.py  test_sudo.py  test_users.py  test_vim.py
tests/test_context/: test_context.py  test_context_systemctl.py
tests/test_loader/: test_loader.py
tests/test_writer/: test_escaping_bugs.py  test_interpolation_bug.py  test_interpolation_escaping.py  test_nix_file.py  test_nix_syntax_builder.py  test_nix_writer.py  test_save_functionality.py
tests/writer/: test_nix_file.py  test_nix_syntax_builder.py  test_writer.py
(+39 files in other folders)
