[project]
name = "nix-scribe"
version = "0.1.0"
description = "Reverse-engineer your system state into NixOS config"
authors = [{ name = "Levizor", email = "levizor@disroot.org" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "deepmerge>=2.0",
    "typer>=0.20.0,<0.21.0",
]

[project.scripts]
"nix-scribe" = "nix_scribe.main:app"

[dependency-groups]
dev = ["pytest>=8.4.2,<9.0.0", "ruff>=0.14.3,<0.15.0"]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "B"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["lib", "third_party"]
